[gd_scene load_steps=2 format=3 uid="uid://bbawtnbermnvh"]

[ext_resource type="Script" path="res://Scenes/BarInfo.gd" id="1_okpj2"]

[node name="Control" type="ColorRect"]
anchors_preset = -1
anchor_right = 0.166
anchor_bottom = 0.315
offset_right = -0.23201
offset_bottom = 3.87999
grow_horizontal = 2
grow_vertical = 2
color = Color(0.121569, 0.219608, 0.360784, 1)
script = ExtResource("1_okpj2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 45)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125654
anchor_top = 0.0884238
anchor_right = 0.879581
anchor_bottom = 0.990385
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Texte"
vertical_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Texte"
vertical_alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Texte"
vertical_alignment = 1

[node name="Label4" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 15
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125654
anchor_top = 0.0884238
anchor_right = 0.879581
anchor_bottom = 0.951169
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="VBoxContainer2"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "n"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer2"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "n"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer2"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = " n"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label4" type="Label" parent="VBoxContainer2"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "n / max"
horizontal_alignment = 2
vertical_alignment = 1
